Upgrade to Java 15 (#6)
* Upgrade to Java 15

* Use Maven container with JDK 15

* Update to latest azure pipelines template version

* Use correct latest azure pipelines template version

* Fix azure build